<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Create new login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_text_1">This app allows you to see and create some shoe listings</string>
    <string name="welcome_text_expanded">Go to the next screen to get started</string>
    <string name="go_button_text">Go</string>
    <string name="instructions_text_1">See shoe details by tapping on each listing. Add shoes by tapping on the plus sign.
</string>
    <string name="instructions_text_2">You can navigate back and forth in this app via navigation menu on top or by using device back button.
</string>
    <string name="email_hint">Email or username</string>
    <string name="password">Password</string>
    <string name="header_instruction_text">How to see and add shoes</string>
    <string name="header_welcome_text">Welcome to my shoe store</string>
    <string name="welcome_text_2">Click \'GO\' to get started</string>
    <string name="see_shoe_list_button_text">Go to shoe list</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="header_shoe_detail_text">Add Shoe Details</string>
    <string name="hint_shoe_detail_name">Shoe Name</string>
    <string name="hint_shoe_detail_size">Size</string>
    <string name="username_label_text">User Name</string>
    <string name="ShoeName">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="string_format">%s</string>
    <string name="number_format">%.2f</string>
    <string name="list_of_shoes">List of shoes</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="shoe_list_title">All Shoes</string>
    <string name="shoe_store_title">My Shore Store</string>
    <string name="onboarding_title">Onboarding Instructions</string>
    <string name="add_shoe_title">Add new shoe</string>
</resources>
