<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill|center_vertical|fill_vertical"
        android:orientation="vertical"
        android:paddingTop="16dp"
        tools:context=".screens.WelcomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_instruction"
            style="@style/default_header"
            android:text="@string/header_instruction_text" />

        <TextView
            android:id="@+id/instruction_textView_1"
            style="@style/default_textview_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:text="@string/instructions_text_1" />

        <TextView
            android:id="@+id/instruction_textView_2"
            style="@style/default_textview_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/instructions_text_2" />

        <TextView
            android:id="@+id/btn_instruction_go"
            style="@style/default_button_style"
            android:text="@string/see_shoe_list_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_textView_2" />

    </LinearLayout>
</layout>