<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.WelcomeFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_welcome"
            style="@style/default_header"
            android:text="@string/header_welcome_text"
             />

        <TextView
            android:id="@+id/welcome_textView"
            android:text="@string/welcome_text_1"
            style="@style/default_textview_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_padding"
           />

        <TextView
            android:id="@+id/welcome_textView_2"
            android:text="@string/welcome_text_2"
            style="@style/default_textview_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_padding"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_welcome_go"
            style="@style/default_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_padding"
            android:text="@string/go_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_textView_2" />

    </LinearLayout>
</layout>