<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoesViewModel"
            type="com.udacity.shoestore.models.ShoesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/default_textview_style"
        android:layout_width="match_parent"
        android:layout_height="664dp"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/header_shoe_detail"
            style="@style/default_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_shoe_detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_shoe_detail_name"
            android:minHeight="48dp"
            android:textColorHint="@color/colorAccent"
            android:text="@={shoesViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_shoe_detail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/company"
            android:text="@={shoesViewModel.company}"
            android:minHeight="48dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_shoe_detail_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/size"
            android:text="@={shoesViewModel.size}"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_shoe_detail_company" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/description"
            android:text="@={shoesViewModel.description}"
            android:inputType="textImeMultiLine"
            android:minHeight="96dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_shoe_detail_size" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>