<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.screen.shoedetail.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/default_textview_style"
        android:layout_width="match_parent"
        android:layout_height="664dp"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/header_shoe_detail"
            style="@style/default_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_shoe_detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_shoe_detail_name"
            app:layout_constraintBottom_toTopOf="@+id/edittext_shoe_detail_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_shoe_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_shoe_detail_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_shoe_detail_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_shoe_detail_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>